Completely implemented flac metadata reading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project( MyFlacDecoder )
 
 include_directories(includes)
 
-set(HEADER_FILES src/read_write.c includes/read_write.h)
+set(HEADER_FILES src/bitreader.c src/bitwriter.c includes/bitreader.h includes/bitwriter.h)
 
 add_executable (read_wav src/read_wav.c ${HEADER_FILES})
 add_executable (read_flac src/read_flac.cpp ${HEADER_FILES})
