--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project( MyFlacDecoder )
 
 include_directories(includes)
 
-set(HEADER_FILES src/bitreader.c src/bitwriter.c includes/bitreader.h includes/bitwriter.h)
+set(HEADER_FILES src/bitreader.c src/bitwriter.c src/frames.cpp src/subframes.cpp src/metadata.cpp
+ includes/bitreader.h includes/bitwriter.h includes/frames.hpp includes/subframes.hpp 
+ includes/metadata.hpp)
 
 add_executable (read_wav src/read_wav.c ${HEADER_FILES})
 add_executable (read_flac src/read_flac.cpp ${HEADER_FILES})
