Reimplemented file reading in C++ Made the file reader better by buffering the file to read instead of constantly reading it from disc. Wrote some test cases for the file reader.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,11 @@ set(HEADER_FILES src/bitreader.c src/bitwriter.c src/frames.cpp src/subframes.cp
  includes/bitreader.h includes/bitwriter.h includes/frames.hpp includes/subframes.hpp 
  includes/metadata.hpp)
 
-add_executable (read_wav src/read_wav.c ${HEADER_FILES})
+set(XFILES src/bitreader.cpp includes/bitreader.hpp)
+
+
+add_executable (test_bitreader tests/bitreader_test.cpp ${XFILES})
+#add_executable (read_wav src/read_wav.c ${HEADER_FILES})
 add_executable (read_flac src/read_flac.cpp ${HEADER_FILES})
+
+
