Fixed so that all classes declarations and definitions are correctly separated in cpp and hpp files. Implemented read_bits as a template Began changing class variables to _... notation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(HEADER_FILES src/bitreader.cpp src/bitwriter.c src/frames.cpp src/subframes.
 
 set(XFILES src/bitreader.cpp includes/bitreader.hpp)
 
-set(CMAKECXX_FLAGS -g -static -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy 
+set(CMAKECXX_FLAGS -g -static -std=c++11 -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy 
     -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations 
     -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual 
     -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel 
