Objectified Wave reading
Wave reading is now encapsulated in the wavereader.*pp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ project( MyFlacDecoder )
 
 include_directories(includes)
 
-set(HEADER_FILES src/bitreader.cpp src/bitwriter.c src/frames.cpp src/subframes.cpp src/metadata.cpp src/flacreader.cpp  
- includes/bitreader.hpp includes/bitwriter.h includes/frames.hpp includes/subframes.hpp 
- includes/metadata.hpp includes/constants.hpp includes/flacreader.hpp)
+set(HEADER_FILES src/bitreader.cpp src/frames.cpp src/subframes.cpp src/metadata.cpp 
+    src/flacreader.cpp includes/bitreader.hpp includes/frames.hpp includes/subframes.hpp 
+    includes/metadata.hpp includes/constants.hpp includes/flacreader.hpp src/wavereader.cpp
+    includes/wavereader.hpp includes/bitwriter.h src/bitwriter.c)
 
 set(XFILES src/bitreader.cpp includes/bitreader.hpp)
 
@@ -18,7 +19,8 @@ set(CMAKECXX_FLAGS -g -static -std=c++11 -pedantic -Wall -Wextra -Wcast-align -W
 
 
 #add_executable (../tests/test_bitreader ../tests/bitreader_test.cpp ${XFILES})
-add_executable (read_wav src/read_wav.c ${HEADER_FILES})
+add_executable (read_wav src/read_wav.cpp ${HEADER_FILES})
+add_executable (read_wavo src/read_wav.c ${HEADER_FILES})
 add_executable (read_flac src/read_flac.cpp ${HEADER_FILES})
 
 
