Implemented bit writer and rice encoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,13 @@ set(FLAC_DECODER_INCLUDES includes/bitreader.hpp includes/frames.hpp includes/su
 set( src/wavereader.cpp
     includes/wavereader.hpp includes/bitwriter.h src/bitwriter.c)
 
-set(XFILES src/bitreader.cpp includes/bitreader.hpp)
+set(XFILES src/bitwriter.cpp includes/bitwriter.hpp src/bitreader.cpp includes/bitreader.hpp)
 
 set(CMAKE_CXX_FLAGS "-g -static -Og -std=c++11 -Wall -Wno-unused-variable -Wno-switch")
 
 
-#add_executable (../tests/test_bitreader ../tests/bitreader_test.cpp ${XFILES})
+add_executable (../tests/test_bitreader ../tests/bitreader_test.cpp ${XFILES})
+add_executable (../tests/bitwriter_test ../tests/bitwriter_test.cpp ${XFILES})
 #add_executable (read_wav src/read_wav.cpp ${HEADER_FILES})
 #add_executable (read_wavo src/read_wav.c ${HEADER_FILES})
 add_executable (flacd src/flacd.cpp ${FLAC_DECODER_SOURCES} ${FLAC_DECODER_INCLUDES})
