Implemented the googletest framework
Began migrating bitreader_test.cpp to the googletest framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 2.8)
-project( MyFlacDecoder )
+project( fLaCPGA )
+
+add_subdirectory(gtest)
+include_directories(gtest/include)
 
 include_directories(includes)
 include_directories(src)
 
+
 set(BIT_IO_SRC src/bitreader.cpp src/bitwriter.cpp)
 set(BIT_IO_INC includes/bitreader.hpp src/bitreader.tpp includes/bitwriter.hpp src/bitwriter.tpp)
+
 
 set(WAVE_SRC src/wavereader.cpp)
 set(WAVE_INC includes/wavereader.hpp)
@@ -18,7 +23,8 @@ set(FLAC_DECODER_INCLUDES  includes/frames.hpp includes/subframes.hpp
 set(CMAKE_CXX_FLAGS "-g -static -Og -std=c++14 -Wall -Wno-unused-variable -Wno-switch")
 
 add_executable (../tests/test_bitreader ../tests/bitreader_test.cpp ${BIT_IO_SRC} ${BIT_IO_INC})
-add_executable (../tests/bitwriter_test ../tests/bitwriter_test.cpp ${BIT_IO_SRC} ${BIT_IO_INC})
+target_link_libraries(../tests/test_bitreader gtest rt pthread)
+add_executable (../tests/bitwriter_test ../tests/bitwriter_test.cpp  ${BIT_IO_SRC} ${BIT_IO_INC})
 add_executable (read_wav src/read_wav.cpp ${BIT_IO_SRC} ${BIT_IO_INC} ${WAVE_SRC} ${WAVE_INC})
 add_executable (flacd src/flacd.cpp ${FLAC_DECODER_SOURCES} ${FLAC_DECODER_INCLUDES})
 
