Restructured project directories
C++ code is now in the Software directory
Verilog code and Quartus project now in the Hardware directory
Added documentation folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
 *.flac
 *.wav
-.kateproject
+*.kateproject
 .swp
 .swo
-build/*
-.kateproject.d/*
+.qpf
+.qsf
+Hardware/db/*
+Hardware/incremental_db/
+Hardware/output_files/
+Software/build/*
+Software/tests/*
+Software/gtest/*
+Software/.kateproject.d/*
+.directory
