--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,36 @@
 *.kateproject
 .swp
 .swo
-.qpf
-.qsf
+*.qws
+*.4ct
+*.4tc
+*.aux
+*.bbl
+*.blg
+*.css
+*.dvi
+*.html
+*.idv
+*.lg
+*.log
+*.tmp
+*.toc
+*.xref
+*.bak*
+*.rpt
+*.do
+*.xrf
+*.vo
+*.sft
+*.sdo
+*.csd
+*.ini
+*.wlf
+
 Hardware/db/*
 Hardware/incremental_db/
 Hardware/output_files/
+Hardware/simulation
 Software/build/*
 Software/tests/*
 Software/gtest/*
