Added CRC checking to the frame header

--- a/Software/CMakeLists.txt
+++ b/Software/CMakeLists.txt
@@ -8,17 +8,20 @@ include_directories(includes)
 include_directories(src)
 
 
-set(BIT_IO_SRC src/bitreader.cpp src/bitwriter.cpp)
-set(BIT_IO_INC includes/bitreader.hpp src/bitreader.tpp includes/bitwriter.hpp src/bitwriter.tpp)
+set(BIT_IO_SRC src/bitreader.cpp src/bitwriter.cpp src/crc.cpp )
+set(BIT_IO_INC includes/bitreader.hpp src/bitreader.tpp includes/bitwriter.hpp src/bitwriter.tpp
+               includes/crc.hpp )
 
 
 set(WAVE_SRC src/wavereader.cpp)
 set(WAVE_INC includes/wavereader.hpp)
 
 set(FLAC_DECODER_SOURCES  src/frames.cpp src/subframes.cpp
-    src/metadata.cpp src/flacdecoder.cpp  src/wavereader.cpp ${BIT_IO_SRC})
+    src/metadata.cpp src/flacdecoder.cpp  src/wavereader.cpp 
+    ${BIT_IO_SRC})
 set(FLAC_DECODER_INCLUDES  includes/frames.hpp includes/subframes.hpp
-    includes/metadata.hpp includes/flacdecoder.hpp includes/wavereader.hpp ${BIT_IO_INC})
+    includes/metadata.hpp includes/flacdecoder.hpp includes/wavereader.hpp 
+    ${BIT_IO_INC})
 
 set(CMAKE_CXX_FLAGS "-g -static -Og -std=c++14 -Wall -Wno-unused-variable -Wno-switch")
 
@@ -30,6 +33,8 @@ add_executable (../tests/bitwriter_test ../tests/bitwriter_test.cpp  ${BIT_IO_SR
 target_link_libraries(../tests/bitwriter_test gtest rt pthread)
 add_executable (../tests/riceencoder_test ../tests/riceencoder_test.cpp  ${BIT_IO_SRC} src/riceencoder.cpp ${BIT_IO_INC} includes/riceencoder.hpp)
 target_link_libraries(../tests/riceencoder_test gtest rt pthread)
+#add_executable (../tests/crc_test ../tests/crc_test.cpp  ${BIT_IO_SRC} src/crc.cpp ${BIT_IO_INC} includes/crc.hpp)
+#target_link_libraries(../tests/crc gtest rt pthread)
 
 
 add_executable (../tests/generate_residual ../tests/generate_residual.cpp  ${BIT_IO_SRC} src/riceencoder.cpp ${BIT_IO_INC} includes/riceencoder.hpp)
@@ -39,5 +44,5 @@ target_link_libraries(../tests/generate_residual)
 
 add_executable (read_wav src/read_wav.cpp ${BIT_IO_SRC} ${BIT_IO_INC} ${WAVE_SRC} ${WAVE_INC})
 add_executable (flacd src/flacd.cpp ${FLAC_DECODER_SOURCES} ${FLAC_DECODER_INCLUDES})
-
+target_link_libraries(flacd)
 
