--- a/Hardware/fLaCPGA.qsf
+++ b/Hardware/fLaCPGA.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C35F672C6
-set_global_assignment -name TOP_LEVEL_ENTITY SubframeDecoder
+set_global_assignment -name TOP_LEVEL_ENTITY RiceStreamReader2
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:32:51  MARCH 21, 2016"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -50,7 +50,7 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ns" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH SubframeDecoderTB -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH RiceStreamReader2TB -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_NAME FixedDecoderTB -section_id eda_simulation
@@ -73,6 +73,12 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ResidualDeco
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ResidualDecoderTB -section_id ResidualDecoderTB
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id SubFrameDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME SubframeDecoderTB -section_id SubframeDecoderTB
+set_global_assignment -name EDA_TEST_BENCH_NAME SubframeDecoderTB -section_id eda_simulation
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE RiceStreamReader2TB.v
+set_global_assignment -name VERILOG_FILE RiceStreamReader2.v
 set_global_assignment -name VERILOG_FILE SubframeDecoderTB.v
 set_global_assignment -name VERILOG_FILE SubframeDecoder.v
 set_global_assignment -name VERILOG_FILE RiceDecoderTB.v
@@ -89,7 +95,6 @@ set_global_assignment -name SDC_FILE fLaCPGA.sdc
 set_global_assignment -name VERILOG_FILE RiceStreamReader.v
 set_global_assignment -name VERILOG_FILE ResidualDecoder.v
 set_global_assignment -name QIP_FILE RAM.qip
-set_global_assignment -name EDA_TEST_BENCH_NAME SubframeDecoderTB -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderTB.v -section_id FixedDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RiceDecoderTB.v -section_id RiceDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RiceFeederTB.v -section_id RiceFeederTB
@@ -97,7 +102,8 @@ set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RiceStreamRe
 set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RAMLoadTB.v -section_id RAMLoadTB
 set_global_assignment -name EDA_TEST_BENCH_FILE ResidualDecoderTB.v -section_id ResidualDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE SubframeDecoderTB.v -section_id SubframeDecoderTB
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_NAME RiceStreamReader2TB -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id RiceStreamReader2TB
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME RiceStreamReader2TB -section_id RiceStreamReader2TB
+set_global_assignment -name EDA_TEST_BENCH_FILE RiceStreamReader2TB.v -section_id RiceStreamReader2TB
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
