--- a/Hardware/fLaCPGA.qsf
+++ b/Hardware/fLaCPGA.qsf
@@ -97,15 +97,15 @@ set_global_assignment -name VERILOG_FILE RiceStreamReader.v
 set_global_assignment -name VERILOG_FILE ResidualDecoder.v
 set_global_assignment -name QIP_FILE RAM.qip
 set_global_assignment -name RTLV_GROUP_COMB_LOGIC_IN_CLOUD OFF
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderTB.v -section_id FixedDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RiceDecoderTB.v -section_id RiceDecoderTB
-set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RiceFeederTB.v -section_id RiceFeederTB
+set_global_assignment -name EDA_TEST_BENCH_FILE RiceFeederTB.v -section_id RiceFeederTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceStreamReaderTB.v -section_id RiceStreamReaderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/RAMLoadTB.v -section_id RAMLoadTB
 set_global_assignment -name EDA_TEST_BENCH_FILE ResidualDecoderTB.v -section_id ResidualDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE SubframeDecoderTB.v -section_id SubframeDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceStreamReader2TB.v -section_id RiceStreamReader2TB
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
