--- a/Hardware/fLaCPGA.qsf
+++ b/Hardware/fLaCPGA.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C35F672C6
-set_global_assignment -name TOP_LEVEL_ENTITY ResidualDecoder
+set_global_assignment -name TOP_LEVEL_ENTITY SubframeDecoder
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "12:32:51  MARCH 21, 2016"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -77,7 +77,7 @@ set_global_assignment -name EDA_TEST_BENCH_NAME SubframeDecoderTB -section_id ed
 set_global_assignment -name EDA_TEST_BENCH_NAME RiceStreamReader2TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id RiceStreamReader2TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME RiceStreamReader2TB -section_id RiceStreamReader2TB
-set_global_assignment -name RTLV_GROUP_COMB_LOGIC_IN_CLOUD OFF
+set_global_assignment -name RTLV_GROUP_COMB_LOGIC_IN_CLOUD ON
 set_global_assignment -name EDA_TEST_BENCH_NAME FixedDecoderOrder3TB -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id FixedDecoderOrder3TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME FixedDecoderOrder3TB -section_id FixedDecoderOrder3TB
@@ -107,6 +107,7 @@ set_global_assignment -name QIP_FILE RAM.qip
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderTB.v -section_id FixedDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceDecoderTB.v -section_id RiceDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceFeederTB.v -section_id RiceFeederTB
@@ -116,4 +117,3 @@ set_global_assignment -name EDA_TEST_BENCH_FILE ResidualDecoderTB.v -section_id 
 set_global_assignment -name EDA_TEST_BENCH_FILE SubframeDecoderTB.v -section_id SubframeDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceStreamReader2TB.v -section_id RiceStreamReader2TB
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderOrder3TB.v -section_id FixedDecoderOrder3TB
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
