--- a/Hardware/fLaCPGA.qsf
+++ b/Hardware/fLaCPGA.qsf
@@ -50,7 +50,7 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ns" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH ResidualDecoderTB -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH SubframeDecoderTB -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_NAME FixedDecoderTB -section_id eda_simulation
@@ -107,7 +107,6 @@ set_global_assignment -name QIP_FILE RAM.qip
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderTB.v -section_id FixedDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceDecoderTB.v -section_id RiceDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceFeederTB.v -section_id RiceFeederTB
@@ -117,3 +116,4 @@ set_global_assignment -name EDA_TEST_BENCH_FILE ResidualDecoderTB.v -section_id 
 set_global_assignment -name EDA_TEST_BENCH_FILE SubframeDecoderTB.v -section_id SubframeDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceStreamReader2TB.v -section_id RiceStreamReader2TB
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderOrder3TB.v -section_id FixedDecoderOrder3TB
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
