--- a/Hardware/fLaCPGA.qsf
+++ b/Hardware/fLaCPGA.qsf
@@ -87,6 +87,7 @@ set_global_assignment -name VERILOG_FILE FixedDecoderOrder3TB.v
 set_global_assignment -name VERILOG_FILE FixedDecoderOrder3.v
 set_global_assignment -name VERILOG_FILE FixedDecoderOrder0.v
 set_global_assignment -name VERILOG_FILE FixedDecoderOrder1.v
+set_global_assignment -name VERILOG_FILE FrameDecoderTB.v
 set_global_assignment -name VERILOG_FILE FrameDecoder.v
 set_global_assignment -name VERILOG_FILE RiceStreamReader2TB.v
 set_global_assignment -name VERILOG_FILE RiceStreamReader2.v
@@ -104,6 +105,12 @@ set_global_assignment -name SDC_FILE fLaCPGA.sdc
 set_global_assignment -name VERILOG_FILE RiceStreamReader.v
 set_global_assignment -name VERILOG_FILE ResidualDecoder.v
 set_global_assignment -name QIP_FILE RAM.qip
+set_global_assignment -name EDA_TEST_BENCH_NAME FrameDecoderTB -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id FrameDecoderTB
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME FrameDecoderTB -section_id FrameDecoderTB
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderTB.v -section_id FixedDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceDecoderTB.v -section_id RiceDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceFeederTB.v -section_id RiceFeederTB
@@ -113,7 +120,5 @@ set_global_assignment -name EDA_TEST_BENCH_FILE ResidualDecoderTB.v -section_id 
 set_global_assignment -name EDA_TEST_BENCH_FILE SubframeDecoderTB.v -section_id SubframeDecoderTB
 set_global_assignment -name EDA_TEST_BENCH_FILE RiceStreamReader2TB.v -section_id RiceStreamReader2TB
 set_global_assignment -name EDA_TEST_BENCH_FILE FixedDecoderOrder3TB.v -section_id FixedDecoderOrder3TB
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE FrameDecoderTB.v -section_id FrameDecoderTB
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
